fix mobile spacing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -495,8 +495,12 @@ a {
   .hero-section p {
     font-size: 14px;
   }
+  .services-section {
+    padding: 80px 0;
+  }
   .services-section .service-list {
     grid-template-columns: 1fr 1fr;
+    gap: 30px;
   }
   .about-section .container {
     grid-template-columns: 1fr;
@@ -504,14 +508,26 @@ a {
   .about-section .about-text {
     max-width: 100%;
   }
+  .section-featured {
+    padding: 80px 0;
+  }
   .section-featured .featured-works-list {
     grid-template-columns: 1fr;
+    gap: 30px;
+  }
+  .section-testimonial {
+    padding: 80px 0;
   }
   .section-testimonial .testimonials {
     grid-template-columns: 1fr;
+    gap: 30px;
+  }
+  .section-faq {
+    padding: 80px 0;
   }
   .email-cta {
     padding: 20px;
+    margin: 50px 0;
   }
   .email-cta img {
     display: none;
