--- a/src/styles/queries/md-900px.sass
+++ b/src/styles/queries/md-900px.sass
@@ -21,8 +21,10 @@
       font-size: 14px 
 
   .services-section 
+    padding: 80px 0
     .service-list 
       grid-template-columns: 1fr 1fr
+      gap: 30px
 
   .about-section 
     .container
@@ -32,15 +34,26 @@
       max-width: 100%
 
   .section-featured
+    padding: 80px 0
+
     .featured-works-list
       grid-template-columns: 1fr
+      gap: 30px
 
   .section-testimonial 
+    padding: 80px 0
+
     .testimonials 
       grid-template-columns: 1fr
+      gap: 30px
+
+  .section-faq
+    padding: 80px 0
 
   .email-cta
     padding: 20px  
+    margin: 50px 0
+
     img 
       display: none
 
